--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /node_modules/*spec/examples.txt
+
+# Ignore db test files.
+db/test.*
